# timeline

./: .gitignore  .gitmodules  README.md
backend/: .env  CMakeLists.txt  package.json  server.js
backend/docs/: newKnowledge.md
backend/src/: main.cpp
backend/src/config/: config.cpp  config.h
backend/src/database/: database.cpp  database.h  databaseLocal.cpp  databaseLocal.h  databaseRemote.cpp  databaseRemote.h
backend/src/email/smtp/: smtp.cpp  smtp.h
backend/src/localization/: localization.cpp  localization.h
backend/src/localization/lang/: en.json
backend/src/log/: logger.cpp  logger.h  loggerUtil.h
backend/src/output/: consolePrinter.cpp  consolePrinter.h  print.h
backend/src/parsers/: read.h  write.h
backend/src/parsers/env/: readEnv.cpp  readEnv.h
backend/src/parsers/json/: readJSON.cpp  readJSON.h  writeJSON.cpp  writeJSON.h
backend/src/setup/database/: postgreDB.cpp  postgreDB.h
backend/src/tests/mock/: mockDatabase.cpp  mockDatabase.h
backend/src/user/: user.cpp  user.h
backend/src/user/connections/: userConnections.h
backend/src/user/userinfo/: userInfo.cpp  userInfo.h
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Home.vue  Navigation.vue
frontend/src/router/: index.js
frontend/src/views/: Create.vue  Home.vue  Profile.vue  Settings.vue  Timelines.vue
mockups/: timeline.ddb  timeline.drawio
scripts/: folderStructureToText.sh
